[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyscan"
version = "0.1.0"
description = "A fast Python file scanner written in Rust"
requires-python = ">=3.9"
license = "MIT"

[project.scripts]
pyscan = "pyscan.cli:main"

[tool.maturin]
python-source = "python"
module-name = "pyscan._pyscan"
features = ["pyo3/extension-module"]
