[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyscan-yb"
version = "0.1.0"
description = "A fast Python file scanner written in Rust"
requires-python = ">=3.9"
license = "MIT"

[project.scripts]
pyscan-yb = "pyscan_yb.cli:main"

[tool.maturin]
python-source = "python"
module-name = "pyscan_yb._pyscan_yb"
features = ["pyo3/extension-module"]

[tool.black]
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
