[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyscan-yb"
version = "0.1.5"
description = "A fast Python file scanner written in Rust"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Vaibhaw" },
]
keywords = ["file-scanner", "python", "rust", "pyo3", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/ybhaw/pyscan-yb"
Repository = "https://github.com/ybhaw/pyscan-yb"
Documentation = "https://ybhaw.github.io/pyscan-yb/"
Issues = "https://github.com/ybhaw/pyscan-yb/issues"

[project.scripts]
pyscan-yb = "pyscan_yb.cli:main"

[tool.maturin]
python-source = "python"
module-name = "pyscan_yb._pyscan_yb"
features = ["pyo3/extension-module"]

[tool.black]
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
